objects/Order_Line_Items__x.object
<CustomObject>
    <fields>
        <fullName>ACTION_CODE__c</fullName>
        <description>Action code for the line item</description>
        <externalDeveloperName>ACTION_CODE</externalDeveloperName>
        <label>Action Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARRIER_TRACKING__c</fullName>
        <externalDeveloperName>CARRIER_TRACKING</externalDeveloperName>
        <label>Tracking</label>
        <length>61</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CARRIER__c</fullName>
        <description>UPS, Fedex etc</description>
        <externalDeveloperName>CARRIER</externalDeveloperName>
        <label>Carrier</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CURRENT_CHARGE__c</fullName>
        <externalDeveloperName>CURRENT_CHARGE</externalDeveloperName>
        <label>Current Charge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configuration__c</fullName>
        <description>Attributes of the Line Item.</description>
        <externalDeveloperName>CONFIGURATION</externalDeveloperName>
        <label>Configuration</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DISCOUNT_METHOD__c</fullName>
        <externalDeveloperName>DISCOUNT_METHOD</externalDeveloperName>
        <label>Discount</label>
        <length>116</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <externalDeveloperName>DISCOUNT_AMOUNT</externalDeveloperName>
        <label>Discount Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Percent__c</fullName>
        <externalDeveloperName>DISCOUNT_PERCENT</externalDeveloperName>
        <label>Discount Percent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENTITLEMENT_NAME__c</fullName>
        <description>Entitlement</description>
        <externalDeveloperName>ENTITLEMENT_NAME</externalDeveloperName>
        <label>Entitlement</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entitlement_Id__c</fullName>
        <externalDeveloperName>ENTITLEMENT_ID</externalDeveloperName>
        <label>Entitlement Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRANT_ID__c</fullName>
        <externalDeveloperName>GRANT_ID</externalDeveloperName>
        <label>GRANT_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LICENSE_EOC__c</fullName>
        <externalDeveloperName>LICENSE_EOC</externalDeveloperName>
        <label>License # / EOC</label>
        <length>61</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LICENSE_NUMBER__c</fullName>
        <externalDeveloperName>LICENSE_NUMBER</externalDeveloperName>
        <label>License #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Number__c</fullName>
        <externalDeveloperName>LINE_NUMBER</externalDeveloperName>
        <label>Line_Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <externalDeveloperName>NET_PRICE</externalDeveloperName>
        <label>Net Price</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <description>Foreign Key to Order table.</description>
        <externalDeveloperName>ORDER_ID</externalDeveloperName>
        <label>Order Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <externalDeveloperName>ORDER_NUMBER</externalDeveloperName>
        <label>Order</label>
        <length>15</length>
        <referenceTo>Order__x</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>PRODUCT_CODE__c</fullName>
        <label>Product Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTION_ID__c</fullName>
        <externalDeveloperName>PROMOTION_ID</externalDeveloperName>
        <label>Promotion Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTION_NAME__c</fullName>
        <description>Promotion</description>
        <externalDeveloperName>PROMOTION_NAME</externalDeveloperName>
        <label>Promotion</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROMOTION_PART_NUMBER__c</fullName>
        <externalDeveloperName>PROMOTION_PART_NUMBER</externalDeveloperName>
        <label>Promotion Part Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Order_Item_Id__c</fullName>
        <externalDeveloperName>PARENT_ORDER_ITEM_ID</externalDeveloperName>
        <label>Parent Order Item Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <externalDeveloperName>PART_NUMBER</externalDeveloperName>
        <label>Part Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <description>Stores Product Name of the Order Line Item.</description>
        <externalDeveloperName>PRODUCT_NAME</externalDeveloperName>
        <label>Line Item</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QUANTITY__c</fullName>
        <description>QUANTITY</description>
        <externalDeveloperName>QUANTITY</externalDeveloperName>
        <label>Qty</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Root_Order_Item_Id__c</fullName>
        <externalDeveloperName>ROOT_ORDER_ITEM_ID</externalDeveloperName>
        <label>Root Order Item Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SERVICE_START_DATE__c</fullName>
        <externalDeveloperName>SERVICE_START_DATE</externalDeveloperName>
        <label>Service Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <externalDeveloperName>SERVICE_END_DATE</externalDeveloperName>
        <label>Service End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ship_Date__c</fullName>
        <description>This stores Order Line Shipment Date.  Applicable only for Shippable Lines.</description>
        <externalDeveloperName>SHIP_DATE</externalDeveloperName>
        <label>Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_Method__c</fullName>
        <description>This field stores Shipping Method for shippable Order Line.</description>
        <externalDeveloperName>SHIP_METHOD</externalDeveloperName>
        <label>Ship Method</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Charge__c</fullName>
        <externalDeveloperName>SHIPPING_CHARGE</externalDeveloperName>
        <label>Shipping Charge</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Discount__c</fullName>
        <externalDeveloperName>SHIPPING_DISCOUNT</externalDeveloperName>
        <label>Shipping Discount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Tax__c</fullName>
        <externalDeveloperName>SHIPPING_TAX</externalDeveloperName>
        <label>Shipping Tax</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Quote_Line_Item_Id__c</fullName>
        <description>Siebel Quote Line Item Row Id</description>
        <externalDeveloperName>QUOTE_ITEM_ID</externalDeveloperName>
        <label>Siebel Quote Line Item Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Siebel_Row_Id__c</fullName>
        <externalDeveloperName>ROW_ID</externalDeveloperName>
        <label>Siebel Row Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <externalDeveloperName>STATUS_CD</externalDeveloperName>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRACKING_NUMBER__c</fullName>
        <externalDeveloperName>TRACKING_NUMBER</externalDeveloperName>
        <label>Tracking #</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <externalDeveloperName>TAX_AMOUNT</externalDeveloperName>
        <label>Tax Amount</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>